WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274874
Copying and pasting a <picture> element and some text, loses <source> elements
https://bugs.webkit.org/show_bug.cgi?id=274874
Summary
Copying and pasting a <picture> element and some text, loses <source> elements
Aditya Keerthi
Reported
2024-05-29 17:33:03 PDT
rdar://127334446
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-05-29 17:43:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29272
Aditya Keerthi
Comment 2
2024-05-29 18:07:03 PDT
rdar://124625324
EWS
Comment 3
2024-05-31 15:07:09 PDT
Committed
279597@main
(aaaee1d25e29): <
https://commits.webkit.org/279597@main
> Reviewed commits have been landed. Closing PR #29272 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug